Fix spacing issue

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -167,7 +167,7 @@ a:visited {
 
 .caption {
   @include govuk-media-query($from: tablet) {
-    margin: govuk-spacing(2) 0;
+    padding: govuk-spacing(2) 0;
   }
 }
 
